--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,26 @@ form button.btn-primary:hover {
   border-radius: 0 !important;
 }
 
+.texto-animado {
+  background: linear-gradient(270deg, #3b82f6, #8b5cf6, #ec4899, #3b82f6);
+  background-size: 800% 800%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animacaoCor 6s ease infinite;
+  font-weight: bold;
+}
+
+@keyframes animacaoCor {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
 
 
