--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,10 @@ body {
   }
   #servicos h1 {
     font-weight: 700;
-    color: #198754; /* verde Bootstrap */
+    color: #0b8ecb; /* verde Bootstrap */
   }
   #servicos h4 {
-    color: #198754;
+    color: #0b8ecb;
   }
 
   #servicos .card {
@@ -124,18 +124,18 @@ background: linear-gradient(135deg,
   background-size: cover;
 }
 #sobre {
-  background-color: #f4fdf7;
+  background-color: #e8f8ff;
   border-radius: 12px;
   padding: 60px 40px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
 }
 #sobre h1, #sobre h2 {
-  color: #198754;
+  color: #0b8ecb;
 }
 
 /* Estilo geral para seções da página contato */
 .container.my-5 {
-  background-color: #f4fdf7; /* verde clarinho */
+  background-color: #e8f8ff; /* verde clarinho */
   border-radius: 12px;
   padding: 50px 40px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
@@ -144,7 +144,7 @@ background: linear-gradient(135deg,
 
 /* Títulos principais */
 h2.text-center {
-  color: #198754;
+  color: #0b8ecb;
   font-weight: 700;
   font-size: 2.5rem;
   margin-bottom: 2rem;
@@ -200,7 +200,7 @@ form.row.g-3 {
 form label.form-label {
   font-weight: 600;
   font-size: 1.1rem;
-  color: #198754;
+  color: #0b8ecb;
 }
 
 /* Inputs e textarea */
@@ -233,8 +233,8 @@ form textarea.form-control:focus {
 
 /* Botão Enviar */
 form button.btn-primary {
-  background-color: #198754;
-  border-color: #198754;
+  background-color: #0b8ecb;
+  border-color: #064968;
   font-size: 1.25rem;
   padding: 12px 40px;
   border-radius: 50px;
@@ -242,8 +242,8 @@ form button.btn-primary {
 }
 
 form button.btn-primary:hover {
-  background-color: #145c32;
-  border-color: #145c32;
+  background-color: #08567a;
+  border-color: #042b3d;
 }
 
 /* Responsividade */
